deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodeflowtest
  name: nodeflowtest
  namespace: nodeflowtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeflowtest
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nodeflowtest
    spec:
      containers:
        - image: passadoreg/nodereddocker:v2
          imagePullPolicy: Always
          name: nodeflowtest
          ports:
            - containerPort: 1880
              protocol: TCP
          resources: {}
