deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodeflowtest
  name: nodeflowtest
  namespace: nodeflowtest
spec:
  ports:
    - name: "1880"
      port: 1880
      protocol: TCP
      targetPort: 1880
  selector:
    app: nodeflowtest
  sessionAffinity: None
  type: ClusterIP
