deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "public"
  name: nodeflowtest
  namespace: nodeflowtest
spec:
  tls:
  - hosts:
    - nodeflowtest.nucworker.lan
    secretName: kubernetes-dashboard-certs
  rules:
  - host: nodeflowtest.nucworker.lan
    http:
      paths:
      - backend:
          service:
            name: nodeflowtest
            port:
              number: 1880
        path: /
        pathType: ImplementationSpecific
